enum Subject {
  LIST = 0;
  ITEM = 1;
}

message Dat {
  required string key = 1;
  required string path = 2;
}

message List {
  repeated Dat list = 1;
}

message Instruction {
  enum Action {
    // List
    ADD = 0;
    REMOVE = 1;
    GET = 2;
    // Item
    START = 3;
    PAUSE = 4;
    LOAD = 5;
    WATCH = 6;
    MKDIR = 7;
    READDIR = 8;
    UNLINK = 9;
    RMDIR = 10;
    INFO = 11;
    // FS
    // WRITE = 12;
    // READ = 13;
  }

  required int32 id = 1;
  required Action action = 2;
  required Subject subject = 3;
  optional string key = 4;
  optional string path = 5;
}

message Statistics {
  required int64 files = 1;
  required int64 connected = 2;
  required int64 byteLength = 3;
  required int64 version = 4;
  required float downloadSpeed = 5;
  required float uploadSpeed = 6;
  required float totalPeers = 7;
  required float completePeers = 8;
}

message Answer {
  required int32 id = 1;
  optional int32 failure = 2 [default = 0];
  optional string message = 3;
  optional Statistics statistics = 4;
  repeated Dat list = 5;
  repeated string files = 6;
}
